fix images wrong positioned

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -6219,6 +6219,10 @@ span.closeGen {
     grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
    
 }
+    
+    .centerCoffee {
+    text-align: center;
+}
   
     .centerCoffee a img {
       
